# Morpheus-Marketplace-API

./: .cursorignore  .env.example  .gitignore  AUTOMATION_TESTING.md  DEPENDENCY_OVERRIDE_GUIDE.md  DIRECT_MODEL_SERVICE_VERIFICATION.md  DOCKER_TESTING.md  Dockerfile  Morpheus API Open Actions.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_FIX_DOCUMENTATION.md  README.md  SECURITY_CLEANUP_CHECKLIST.md  SOCIAL_LOGIN_MIGRATION_SUMMARY.md  URL_VARIABLIZATION_FIX.md  alembic.ini  awsonboard  awsonboard_mor  cloudwatch-dashboard.json  code-promotion.md  db_migration_fixes.md  deploy-with-testing.sh  docker-compose.local.yml  docker-compose.yml  env.example  env.local.example  fastapi_implementation_plan.md  manage_migrations.sh  migration_fix.py  models.json  models.json.backup  package.json  pyproject.toml  run_tests.py  session_table_fix.py  setup_systemd.sh  test-container-locally.sh  test_automation.py  test_automation_e2e.py  test_automation_e2e_simulated.py  (+1 more)
.ai-docs/: API_AUTH_ENDPOINTS.md  API_KEY_VERIFICATION_PERFORMANCE_ISSUE.md  AUTOMATION_AUTH_FRONTEND_FIX.md  BALANCE_CACHE_BUG_FIX.md  CACHE_AUDIT.md  CHAT_STORAGE_AUTH_CONSISTENCY.md  CORS_SOLUTION_SUMMARY.md  CORS_TESTING_GUIDE.md  DATABASE_CONNECTION_POOL_TUNING.md  DB_Strategy_Comparison.md  DEFAULT_MODEL_FALLBACK_SYSTEM.md  ERD.md  GITHUB_RELEASES.md  LOGGING_FIXES_APPLIED.md  LOGGING_METRICS_GUIDE.md  LOGGING_SYSTEM_REFERENCE.md  MIGRATION_SAFETY_ANALYSIS.md  MORPHEUS_ARCHITECTURE_OVERVIEW.md  REDIS_CACHING.md  REDIS_CACHING_CHANGES.md  REDIS_CREDITS_CACHING_IMPLEMENTATION.md  SELF_CONTAINED_LOCAL_TESTING.md  (+5 more)
(+286 files in other folders)
